# 3D-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.lua  README.md  premake5.lua
.github/workflows/: cmake.yml
Client/: imgui.ini  premake5.lua
Client/src/: Application.cpp  Application.h  main.cpp
Engine/: premake5.lua
Engine/src/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
Engine/src/Application/: Specification.h  Window.cpp  Window.h  WindowSpecification.h
Engine/src/Camera/: Camera.cpp  Camera.h
Engine/src/Engine/Application/: Window.cpp  Window.h
Engine/src/Engine/Core/: InputManager.cpp  InputManager.h
Engine/src/Engine/Event/: InputManager.cpp  InputManager.h
Engine/src/Engine/GUI/: GUI.cpp  GUI.h
Engine/src/Engine/Interface/: Interface.cpp  Interface.h
Engine/src/Engine/Renderer/: RenderCommands.cpp  RenderCommands.h  Renderer.cpp  Renderer.h
Engine/src/Engine/UserInterface/: UserInterface.cpp  UserInterface.h
Engine/src/Renderer/: ModelLoader.cpp  ModelLoader.h  ModelSpecification.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  TextureSpecification.h
Engine/src/UserInterface/: EnableDockspace.h  ModelLoader.cpp  ModelLoader.h  UserInterface.cpp  UserInterface.h
Scripts/: Build-WIndow.bat  Generate-Frame-Model.bat  Train-Frame-Generator.bat  generate_ai_sample_model.py  train_frame_generator.py
Trident/: CMakeLists.txt
Trident-Forge/: CMakeLists.txt
Trident-Forge/Assets/Shaders/: Cube.vert  Default.frag  Default.vert  Skybox.frag  Skybox.vert  Text.frag  Text.vert
Trident-Forge/src/: ApplicationLayer.cpp  ApplicationLayer.h  EditorExportService.cpp  EditorExportService.h  EntryPoint.cpp  ImGuizmoLayer.cpp  ImGuizmoLayer.h
Trident-Forge/src/EditorCamera/: EditorCamera.cpp  EditorCamera.h
Trident-Forge/src/Panels/: AIDebugPanel.cpp  AIDebugPanel.h  AnimationGraphPanel.cpp  AnimationGraphPanel.h  ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorToolbar.cpp  EditorToolbar.h  GameViewportPanel.cpp  GameViewportPanel.h  GizmoState.h  InspectorPanel.cpp  InspectorPanel.h  OutputPanel.cpp  OutputPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneViewportPanel.cpp  SceneViewportPanel.h  ViewportPanel.cpp  ViewportPanel.h
Trident/Config/: AISettings.json
Trident/src/: Application.cpp  Application.h
Trident/src/AI/: FrameDatasetRecorder.cpp  FrameDatasetRecorder.h  FrameGenerator.cpp  FrameGenerator.h  ONNXRuntime.cpp  ONNXRuntime.h  OnnxRuntimeContext.cpp  OnnxRuntimeContext.h
Trident/src/Animation/: AnimationAssetService.cpp  AnimationAssetService.h  AnimationBlendTree.cpp  AnimationBlendTree.h  AnimationData.h  AnimationPlayer.cpp  AnimationPlayer.h  AnimationPose.cpp  AnimationPose.h  AnimationRemap.cpp  AnimationRemap.h  AnimationSourceRegistry.cpp  AnimationSourceRegistry.h  AnimationStateMachine.cpp  AnimationStateMachine.h
Trident/src/Application/: Input.cpp  Input.h  Startup.cpp  Startup.h
Trident/src/Camera/: Camera.cpp  Camera.h  CameraComponent.h  RuntimeCamera.cpp  RuntimeCamera.h
Trident/src/Core/: Utilities.cpp  Utilities.h
Trident/src/ECS/: AnimationSystem.h  ECS.h  Entity.h  Registry.h  Scene.cpp  Scene.h  System.h
Trident/src/ECS/Components/: AnimationComponent.h  AnimationSystem.cpp  CameraComponent.h  LightComponent.h  MeshComponent.h  RelationshipComponent.h  ScriptComponent.h  SpriteComponent.h  TagComponent.h  TextureComponent.h  TransformComponent.h  UUIDComponent.h
Trident/src/Events/: ApplicationEvents.h  Events.h  KeyCodes.h  KeyEvents.h  MouseCodes.h  MouseEvents.h
Trident/src/Geometry/: Cube.h  Material.h  Mesh.h
Trident/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Trident/src/Layer/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h
Trident/src/Loader/: AssimpExtensions.cpp  AssimpExtensions.h  ModelLoader.cpp  ModelLoader.h  ModelSource.cpp  ModelSource.h  SceneLoader.cpp  SceneLoader.h  TextureLoader.cpp  TextureLoader.h
Trident/src/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
Trident/src/Renderer/: Buffers.cpp  Buffers.h  CommandBufferPool.cpp  CommandBufferPool.h  Commands.cpp  Commands.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderData.h  Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h  Swapchain.cpp  Swapchain.h  TextRenderer.cpp  TextRenderer.h  UniformBuffer.h  Vertex.h  VideoEncoder.cpp  VideoEncoder.h
Trident/src/Renderer/Camera/: Camera.h  EditorCamera.cpp  EditorCamera.h  RuntimeCamera.cpp  RuntimeCamera.h
Trident/src/UI/: FileDialog.cpp  FileDialog.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiStyleManager.cpp  ImGuiStyleManager.h
Trident/src/Window/: Window.cpp  Window.h
Trident/tools/: ValidateOnnxAsset.cpp
cmake/: Deps.cmake  Tooling.cmake
